# neonavt_tg_bot

./: index.html  main.py  pyproject.toml  settings.py
aiogram_bot/: main.py
currency_converter_bot/: main.py
tg_web_app/: index.html  main.py
weather_bot/: main.py
