[project]
name = "neonavt_tg_bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Клим",email = "klim.klushin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytelegrambotapi (>=4.28.0,<5.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "currencyconverter (>=0.18.9,<0.19.0)",
    "aiogram (>=3.22.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
